@@ -1,4 +1,4 @@
 DIST istack-commons-20070711.tar.bz2 15591 RMD160 b8f91fac3edcda238c5cb48dbffadb3836859b7e SHA1 1d52dbcab83146561cf10e38d1f0769a303f0423 SHA256 c814ea8b03abfa89aa416b87d700c8840a0fa2e4eb5978c50e92ffa080e12ab1
-EBUILD istack-commons-tools-20070711.ebuild 1266 RMD160 1e89338ba66742875269cc952fdf418a07d92e87 SHA1 aa541f565a3ffae71a6d9f965847a1c6427d2e36 SHA256 289e34b2244ecd105a01904b18718487c130df8c7422625ae805ae6e8bd0272d
-MISC ChangeLog 459 RMD160 43f0c27941147c8558f8b60a253a7ab93365e9ed SHA1 c6939b02e70627681795ecd0ca6c312bf513fd1c SHA256 4463c3b7ad9f7aac4fe9c740a31a4fd03f19efe86a539c448a96cb84e96338be
+EBUILD istack-commons-tools-20070711.ebuild 1186 RMD160 29cec7ee9f4f28be709790271815ee0a92ff1c21 SHA1 b38e3da6fdcbeea9fee381ebb3dc274671ce01f1 SHA256 aaf2da36c555ac46ad6acb88d21fcd1393fe252f7a5ba2d0b58900d099e06211
+MISC ChangeLog 601 RMD160 585876662d2e29635a79a7db032123c6ca8f6c13 SHA1 902d901a95605d7b24dbb2c641a54cad5945d6ee SHA256 7f92a8d57a40644a457d9fea9dfb0414967ddfcfe4d6c490a46f22330add6291
 MISC metadata.xml 159 RMD160 7da5c733c224383ffe350605bc36721a3ff2536f SHA1 99c2655c7bbee2cbc8c79edb2d00d481d62faf95 SHA256 a4ced33e98b00e3a3f725c4c40ef8e76c338db53389465ef871105fbe6e8cbbb
