@@ -1,0 +1,3 @@
+AUX build-1.0-r2.xml 1771 RMD160 934dffe75d649f81af2742989f26d767b36059a7 SHA1 65d3460c64123666de47fcb610a98b2256c96cf8 SHA256 ee9b9ab4882a41ed45be0db9760d229d20ddcaf185080c26b7a912ad48caa2d3
+DIST jsr173.jar 639734 RMD160 4f8a7522a774d34149987703c828b4bfbafc0966 SHA1 ff060a042afba00c2bd760b49cf847a5134cc07d SHA256 3f6976396e31836dfe99fdc7aa72ee195546b6b6503618f60e2dc2651ed990ba
+EBUILD jsr173-1.0-r2.ebuild 1236 RMD160 86a474fd35dc08d023094367ed6153ea78107f85 SHA1 25a6d8c0f6819aecc3a48a64986c066366a066e1 SHA256 b77e1f2cb7fe54a259eb29e79d11b3d72b493863d9ff845c961c377b24177302
