@@ -1,0 +1,61 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!---
+   @author: Saleem Abdulrasool <compnerd@gentoo.org>
+   @date: 5/9/2005
+   @revision: 1.0_alpha
+
+   @notes: Call using the following: ant -f build.xml -Dproject.name=${project name} -Dpackage.name=${package name}
+-->
+
+<project name="Gentoo_Builder" default="jar" basedir=".">
+   <property name="src" value="src"/>
+   <property name="build" value="build"/>
+   <property name="dist" value="dist"/>
+   <property name="dist.docs" value="${dist}/doc/api"/>
+
+   <property name="libdir" value="lib"/>
+
+   <property name="pkg" value="${package.name}"/>
+   <property name="jar" value="${project.name}.jar"/>
+
+    <path id="lib.classpath">
+		<fileset dir="${libdir}">
+			<include name="**/*.jar"/>
+		</fileset>
+	</path>
+
+   <!-- Override any defined properties -->
+   <property file="build.properties"/>
+
+   <target name="init">
+      <tstamp/>
+      <mkdir dir="${build}"/>
+      <mkdir dir="${dist}"/>
+      <mkdir dir="${dist}/doc"/>
+   </target>
+
+   <target name="compile" depends="init">
+	   <javac srcdir="${src}" destdir="${build}" classpathref="lib.classpath"/>
+   </target>
+
+   <target name="manifest" depends="init">
+      <manifest file="${build}/MANIFEST.MF" mode="update">
+         <attribute name="Built-By" value="Gentoo Portage"/>
+      </manifest>
+   </target>
+   
+   <target name="jar" depends="compile,manifest">
+      <jar jarfile="${dist}/${jar}" manifest="${build}/MANIFEST.MF">
+         <fileset dir="${build}"/>
+      </jar>
+   </target>
+
+   <target name="javadoc" depends="compile">
+	   <javadoc sourcepath="${src}" destdir="${dist.docs}" packagenames="*" classpathref="lib.classpath"/>
+   </target>
+
+   <target name="clean">
+      <delete dir="${build}"/>
+      <delete dir="${dist}"/>
+   </target>
+</project>
