@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/istack-commons-tools
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  12 Oct 2008; Serkan Kaba <serkan@gentoo.org>
+  istack-commons-tools-20070711.ebuild:
+  Migrate to jaf virtual. Remove unneeded dependency.
 
   02 Sep 2007; Miroslav Šulc <fordfrog@gentoo.org>
   istack-commons-tools-20070711.ebuild:
